--- a/trackingsite/index.html
+++ b/trackingsite/index.html
@@ -21,9 +21,9 @@ mv-storage="logentry.json" >
 </header>
 <main>
 
-  <div class="migraines">
+  <div class="DailyLog">
 		<!-- <div class="since">[duration(first(date) - $today)] since last migraine!</div> -->
-		<article property="migraine" id="migraine-[date]-[startTime]" mv-multiple mv-order="desc" style="--intensity:[intensity];">
+		<article property="LogEntry" id="LogEntry-[date]-[startTime]" mv-multiple mv-order="desc" style="--intensity:[intensity];">
 			<header>
 				<span property="weekday">[weekday(date, "name")]</span>
 				<time property="date" mv-default="[$today]"></time>
