--- a/trackingsite/stats.html
+++ b/trackingsite/stats.html
@@ -95,8 +95,8 @@ style="--average-duration: [averageDuration]">
 
 	<aside id="stats">
 		<dl class="stats">
-			<dt>Migraines recorded:</dt>
-			<dd property="totalMigraines">[count(migraine)]</dd>
+			<dt>daily logs recorded:</dt>
+			<dd property="totalMigraines">[count(LogEntry)]</dd>
 
 			<dt>Average interval:</dt>
 			<dd>[duration(average(timeElapsed))]</dd>
