--- a/trackingsite/index.html
+++ b/trackingsite/index.html
@@ -8,9 +8,10 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="home.css">
 </head>
-<body mv-app="Happiness Log" mv-source="https://github.com/yoswagenmans/MavoTesting/blob/main/trackingsite/logentry.json"
+<body mv-app="Happiness Log" mv-plugins="gsheets"
 mv-storage="https://docs.google.com/spreadsheets/d/1dL5K5-M2k2RkDKRDr_nigYMjCMu71F0pfgHb5XP3jFU/edit?usp=sharing"
-mv-storage-sheet="Sheet2" >
+mv-storage-sheet="Sheet2" mv-source-range="1:3"
+mv-source-options="dataInColumns, transformHeadings">>
 <!--mv-storage="migraines.json" >
 mv-storage="logentry.json" >
 -->
@@ -22,6 +23,7 @@ mv-storage="logentry.json" >
 </header>
 <main>
 
+
   <div class="DailyLog">
 		<!-- <div class="since">[duration(first(date) - $today)] since last migraine!</div> -->
 		<article property="LogEntry" id="LogEntry-[date]]" mv-multiple mv-order="desc" style="--intensity:[intensity];">
@@ -30,26 +32,44 @@ mv-storage="logentry.json" >
 				<span property="weekday">[weekday(date, "name")]</span>
 
         <div class = "ratingbar">
-         Happiness  <meter property="rating" min="0" max="20" mv-edit-step="1" mv-default="10" title="Overall Happiness: [rating]"></meter>
+         Happiness(1 - 20)  <meter property="rating" min="0" max="20" mv-edit-step="1" mv-default="10" title="Overall Happiness: [rating]"></meter>
           [rating]
         </div>
-
-				<div property="person" mv-attribute="content" mv-edit="#personSelect"></div>
+				<div property="person" mv-edit="#personSelect"></div>
 
 			</header>
-			<div property="Entry"></div>
+			<div property="Entry">helo</div>
 	</article>
 	</div>
 </main>
+<div>
+	<div mv-app="personChoice" mv-storage="local">
+		<select id="personSelect" property="selected">
+			<option>Person 1</option>
+			<option>Person 2</option>
+			<option>Person 3</option>
+		</select>
 
-<div hidden>
-	<select id="personSelect">
-		<option>Person 1</option>
-		<option>Person 2</option>
-		<option>Person 3</option>
-	</select>
+	</div>
 </div>
 
+<dl class="stats">
+	<dt>Total logs recorded:</dt>
+	<dd property="logEntries">[count(LogEntry)]</dd>
+
+	<dt>Selected Person:</dt>
+	<dd>[count(LogEntry.person=personChoice.selected)] </dd>
+	<dd>[average(filter(LogEntry, LogEntry.person = personChoice.selected).rating)]</dd>
+
+
+	<dt>Average happiness</dt>
+	<dd><span property="happiness">[average(rating)]</span> happiness</dd>
+
+
+
+
+
+</dl>
 <script src="https://dev.mavo.io/dist/mavo.js"></script>
 
 </body>
